# AI_SDL

./: AI_SDL.sln  CMakeLists.txt  README.md
AI_SDL/: AI_SDL.vcxproj  AI_SDL.vcxproj.filters  Dot.cpp  Dot.h  Entity.cpp  Entity.h  Game.cpp  Game.hpp  Map.cpp  Map.h  MyPoint.cpp  MyPoint.h  macro.h  main.cpp
AI_SDL/Debug/: vc141.idb
AI_SDL/Debug/AI_SDL.tlog/: AI_SDL.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
AI_SDL/x64/Debug/: vc141.idb
AI_SDL/x64/Debug/AI_SDL.tlog/: AI_SDL.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AI_SDL_Win/: AI_SDL_Win.sln  AI_SDL_Win.vcxproj  AI_SDL_Win.vcxproj.filters
AI_SDL_mac/AI_SDL_mac/: main.cpp
AI_SDL_mac/AI_SDL_mac.xcodeproj/: project.pbxproj
AI_SDL_mac/AI_SDL_mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Src/: AI.cpp  AI.hpp  AI_Enemy.cpp  AI_Enemy.hpp  AI_Player.cpp  AI_Player.hpp  AStar.cpp  AStar.hpp  BTNode.cpp  BTNode.hpp  BTNode_Move.cpp  BTNode_Move.hpp  BTNode_Sequence.cpp  BTNode_Sequence.hpp  Block.cpp  Block.hpp  BlockMgr.cpp  BlockMgr.hpp  CMakeLists.txt  Font.cpp  Font.hpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameObject.cpp  GameObject.hpp  GameObjectMgr.cpp  GameObjectMgr.hpp  Geometry.cpp  Geometry.hpp  Macros.hpp  Math.cpp  Math.hpp  Point2D.cpp  Point2D.hpp  Timer.cpp  Timer.hpp  Trigger.cpp  Trigger.hpp  (+3 more)
Src/AI/: MessageDispatcher.cpp  MessageDispatcher.h  State.h  StateMachine.h  StateMove.cpp  StateMove.h  StateRandomMove.cpp  StateRandomMove.h  Telegram.h
Src/Math/: Vector2D.h  Vector3.cpp  Vector3.h
x64/Debug/: AI_SDL.ilk
(+2 files in other folders)
